--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/bg.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/bg.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Все още няма разговори";
 "facebook.like.us" = "Харесайте ни във Facebook";
 "from.app" = "от {name}";
-"error.loading.conversations.fallback" = "Неуспешно зареждане на разговорите с екип {name}";
 "message.placeholder.start.conversation" = "Започнете разговор";
 "navigation.back" = "Назад";
 "admin.from.app" = "{name} от {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Доставено";
 "actionsheet.try.again" = "Опитайте отново";
 "alert.new.sdk.user.title" = "Поздравления";
-"app_team" = "{name} Екип";
 "navbar.title.conversations" = "Разговори\nс {name}";
 "actionsheet.cancel" = "Отказ";
 "navigation.close" = "Затваряне";
@@ -37,7 +35,6 @@
 "message.seen" = "Видяно";
 "last_active.format.days.ago" = "Активност преди {days}дни";
 "error.starting.conversation.fallback" = "Неуспешно започване на нов разговор";
-"error.no_conversations.message" = "Все още няма разговори с екип {name}";
 "time.difference.format.days.ago" = "преди {delta}дни";
 "error.loading.conversations.fallback.no_app_name" = "Неуспешно зареждане на вашите разговори";
 "we.run.on.intercom" = "Ние използваме Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Повторен опит";
 "reply_from_admin" = "Отговор от {name}";
 "inbox.you" = "Вие";
+"article_question" = "Това отговори ли на вашия въпрос?";
+"article_reaction" = "Вие реагирахте с";
+"asked_about" = "Попитахте за";
+"article_load_error" = "Неуспешно зареждане на статията";
+"error.loading.conversations.fallback" = "Неуспешно зареждане на разговорите ви с {name}";
+"error.no_conversations.message" = "Все още няма разговори с {name}";
