--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ca.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ca.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Cap conversa encara";
 "facebook.like.us" = "Fes clic a M’agrada al Facebook";
 "from.app" = "de {name}";
-"error.loading.conversations.fallback" = "No s’han pogut carregar les converses amb l’equip {name}";
 "message.placeholder.start.conversation" = "Inicia una conversa";
 "navigation.back" = "Enrere";
 "admin.from.app" = "{name} de {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Lliurat";
 "actionsheet.try.again" = "Torna-ho a provar";
 "alert.new.sdk.user.title" = "Felicitats";
-"app_team" = "Equip {name}";
 "navbar.title.conversations" = "Converses\namb {name}";
 "actionsheet.cancel" = "Cancel·la";
 "navigation.close" = "Tanca";
@@ -37,7 +35,6 @@
 "message.seen" = "Vist";
 "last_active.format.days.ago" = "Actiu fa {days} dia(es)";
 "error.starting.conversation.fallback" = "No s’ha pogut iniciar una conversa nova";
-"error.no_conversations.message" = "Encara no hi ha cap conversa amb l’equip {name}";
 "time.difference.format.days.ago" = "Fa {delta} dia(es)";
 "error.loading.conversations.fallback.no_app_name" = "No s’han pogut carregar les converses";
 "we.run.on.intercom" = "Utilitzem Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Torna-ho a provar";
 "reply_from_admin" = "Resposta de {name}";
 "inbox.you" = "Tu";
+"article_question" = "¿Va respondre això a la seva pregunta?";
+"article_reaction" = "Ha reaccionat amb";
+"asked_about" = "Va preguntar sobre";
+"article_load_error" = "No ha estat possible carregar l'article";
+"error.loading.conversations.fallback" = "No ha estat possible carregar les seves conversacions amb {name}";
+"error.no_conversations.message" = "Encara no hi ha cap conversa amb {name}.";
