--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/id.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/id.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Belum ada percakapan";
 "facebook.like.us" = "Sukai kami di Facebook";
 "from.app" = "dari {name}";
-"error.loading.conversations.fallback" = "Tidak dapat memuat percakapan Anda dengan tim {name}";
 "message.placeholder.start.conversation" = "Mulai percakapan";
 "navigation.back" = "Kembali";
 "admin.from.app" = "{name} dari {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Terkirim";
 "actionsheet.try.again" = "Coba Lagi";
 "alert.new.sdk.user.title" = "Selamat";
-"app_team" = "Tim {name}";
 "navbar.title.conversations" = "Percakapan\ndengan {name}";
 "actionsheet.cancel" = "Batal";
 "navigation.close" = "Tutup";
@@ -37,7 +35,6 @@
 "message.seen" = "Dilihat";
 "last_active.format.days.ago" = "Aktif {days}h lalu";
 "error.starting.conversation.fallback" = "Tidak dapat memulai percakapan baru";
-"error.no_conversations.message" = "Belum ada percakapan dengan tim {name}";
 "time.difference.format.days.ago" = "{delta}h lalu";
 "error.loading.conversations.fallback.no_app_name" = "Tidak dapat memuat percakapan Anda";
 "we.run.on.intercom" = "Kita menggunakan Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Coba lagi";
 "reply_from_admin" = "Balasan dari {name}";
 "inbox.you" = "Anda";
+"article_question" = "Apakah ini menjawab pertanyaan Anda?";
+"article_reaction" = "Anda bereaksi dengan";
+"asked_about" = "Menanyakan tentang";
+"article_load_error" = "Tidak dapat memuat artikel";
+"error.loading.conversations.fallback" = "Tidak dapat memuat percakapan Anda dengan {name}";
+"error.no_conversations.message" = "Belum ada percakapan dengan {name}";
