--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/lv.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/lv.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Pagaidām nav nevienas sarunu";
 "facebook.like.us" = "Atzīmējiet ar Patīk mūsu lapu pakalpojumā Facebook!";
 "from.app" = "no lietotāja {name}";
-"error.loading.conversations.fallback" = "Nevar ielādēt jūsu sarunas ar komandu {name}";
 "message.placeholder.start.conversation" = "Sākt sarunu";
 "navigation.back" = "Atpakaļ";
 "admin.from.app" = "{name} no uzņēmuma {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Saņemts";
 "actionsheet.try.again" = "Mēģiniet vēlreiz";
 "alert.new.sdk.user.title" = "Apsveicam!";
-"app_team" = "Komanda {name}";
 "navbar.title.conversations" = "Sarunas\nar lietotāju {name}";
 "actionsheet.cancel" = "Atcelt";
 "navigation.close" = "Aizvērt";
@@ -37,7 +35,6 @@
 "message.seen" = "Redzēts";
 "last_active.format.days.ago" = "Aktīvs {days} d. atpakaļ";
 "error.starting.conversation.fallback" = "Nevar uzsākt jaunu sarunu";
-"error.no_conversations.message" = "Pagaidām nav nevienas sarunu ar komandu {name}";
 "time.difference.format.days.ago" = "{delta} d. atpakaļ";
 "error.loading.conversations.fallback.no_app_name" = "Nevar ielādēt jūsu sarunas";
 "we.run.on.intercom" = "Programma darbojas, izmantojot Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Mēģiniet vēlreiz";
 "reply_from_admin" = "Atbilde no {name}";
 "inbox.you" = "Jūs";
+"article_question" = "Vai ar šo uz Jūsu jautājumu ir atbildēts?";
+"article_reaction" = "Jūs atbildējāt ar";
+"asked_about" = "Vaicājāt par";
+"article_load_error" = "Nevarēja ielādēt rakstu";
+"error.loading.conversations.fallback" = "Nevarēja ielādēt Jūsu sarunas ar {name}";
+"error.no_conversations.message" = "Ar {name} vēl nav bijušas sarunas";
