--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/nl.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/nl.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Nog geen gesprekken";
 "facebook.like.us" = "Like ons op Facebook";
 "from.app" = "van {name}";
-"error.loading.conversations.fallback" = "Kan je gesprekken met het team van {name} niet laden";
 "message.placeholder.start.conversation" = "Een gesprek starten";
 "navigation.back" = "Terug";
 "admin.from.app" = "{name} van {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Geleverd";
 "actionsheet.try.again" = "Opnieuw proberen";
 "alert.new.sdk.user.title" = "Gefeliciteerd";
-"app_team" = "Team van {name}";
 "navbar.title.conversations" = "Gesprekken\nmet {name}";
 "actionsheet.cancel" = "Annuleren";
 "navigation.close" = "Sluiten";
@@ -37,7 +35,6 @@
 "message.seen" = "Gezien";
 "last_active.format.days.ago" = "{days} dagen geleden actief";
 "error.starting.conversation.fallback" = "Kan geen nieuw gesprek starten";
-"error.no_conversations.message" = "Nog geen gesprekken met het team van {name}";
 "time.difference.format.days.ago" = "{delta} dagen geleden";
 "error.loading.conversations.fallback.no_app_name" = "Kan je gesprekken niet laden";
 "we.run.on.intercom" = "We draaien op Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Opnieuw proberen";
 "reply_from_admin" = "Antwoord van {name}";
 "inbox.you" = "Jij";
+"article_question" = "Was dit een antwoord op uw vraag?";
+"article_reaction" = "U reageerde met";
+"asked_about" = "Stelde een vraag over";
+"article_load_error" = "Kon het artikel niet laden";
+"error.loading.conversations.fallback" = "Kon uw gesprekken met {name} niet laden";
+"error.no_conversations.message" = "Nog geen gesprekken met {name}";
