--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/pl.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/pl.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Brak rozmów";
 "facebook.like.us" = "Polub nas na Facebooku";
 "from.app" = "od {name}";
-"error.loading.conversations.fallback" = "Nie udało się wczytać Twoich rozmów z zespołem {name}";
 "message.placeholder.start.conversation" = "Rozpocznij rozmowę";
 "navigation.back" = "Wstecz";
 "admin.from.app" = "{name} z {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Dostarczono";
 "actionsheet.try.again" = "Spróbuj ponownie";
 "alert.new.sdk.user.title" = "Gratulacje";
-"app_team" = "Zespół {name}";
 "navbar.title.conversations" = "Rozmowy\nz {name}";
 "actionsheet.cancel" = "Anuluj";
 "navigation.close" = "Zamknij";
@@ -37,7 +35,6 @@
 "message.seen" = "Wyświetlono";
 "last_active.format.days.ago" = "Aktywny {days} dni temu";
 "error.starting.conversation.fallback" = "Nie udało się rozpocząć nowej rozmowy";
-"error.no_conversations.message" = "Brak rozmów z zespołem {name}";
 "time.difference.format.days.ago" = "{delta} dni temu";
 "error.loading.conversations.fallback.no_app_name" = "Nie udało się wczytać Twoich rozmów";
 "we.run.on.intercom" = "Używamy Intercomu";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Spróbuj ponownie";
 "reply_from_admin" = "Odpowiedź od {name}";
 "inbox.you" = "Ty";
+"article_question" = "Czy odpowiedź na Twoje pytanie została przesłana?";
+"article_reaction" = "Twoje pytanie było skierowane do użytkownika";
+"asked_about" = "Pytanie dotyczyło następującego zagadnienia";
+"article_load_error" = "Nie można wczytać artykułu";
+"error.loading.conversations.fallback" = "Nie można wczytać Twoich rozmów w aplikacji {name}";
+"error.no_conversations.message" = "Nie ma jeszcze żadnych rozmów z użytkownikiem {name}";
