--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ro.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ro.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Încă nu există conversaţii";
 "facebook.like.us" = "Apreciaţi-ne pe Facebook";
 "from.app" = "de la {name}";
-"error.loading.conversations.fallback" = "Conversaţiile cu echipa {name} nu au putut fi încărcate";
 "message.placeholder.start.conversation" = "Începe o conversaţie";
 "navigation.back" = "Înapoi";
 "admin.from.app" = "{name} de la {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "Livrat";
 "actionsheet.try.again" = "Încearcă din nou";
 "alert.new.sdk.user.title" = "Felicitări";
-"app_team" = "Echipa {name}";
 "navbar.title.conversations" = "Conversaţii\ncu {name}";
 "actionsheet.cancel" = "Anulare";
 "navigation.close" = "Închidere";
@@ -37,7 +35,6 @@
 "message.seen" = "Văzut";
 "last_active.format.days.ago" = "Activ acum {days} zile";
 "error.starting.conversation.fallback" = "Nu s-a putut începe o conversaţie nouă";
-"error.no_conversations.message" = "Încă nu există conversaţii cu echipa {name}";
 "time.difference.format.days.ago" = "acum {delta} zi";
 "error.loading.conversations.fallback.no_app_name" = "Conversaţiile nu au putut fi încărcate";
 "we.run.on.intercom" = "Rulăm pe Intercom";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Încearcă din nou";
 "reply_from_admin" = "Răspuns de la {name}";
 "inbox.you" = "Tu";
+"article_question" = "Ați primit răspuns la întrebarea dumneavoastră?";
+"article_reaction" = "Aţi reacţionat cu";
+"asked_about" = "Aţi întrebat despre";
+"article_load_error" = "Articolul nu a putut fi încărcat";
+"error.loading.conversations.fallback" = "Conversațiile dumneavoastră nu au putut fi încărcate cu {name}";
+"error.no_conversations.message" = "Nicio conversație cu {name} încă";
