--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/tr.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/tr.strings
@@ -11,7 +11,6 @@
 "error.no_conversations.message.no_app_name" = "Henüz sohbet yok";
 "facebook.like.us" = "Bizi Facebook'ta beğen";
 "from.app" = "{name} kullanıcısından";
-"error.loading.conversations.fallback" = "{name} ekibiyle sohbetlerin yüklenemiyor";
 "message.placeholder.start.conversation" = "Bir sohbet başlat";
 "navigation.back" = "Geri";
 "admin.from.app" = "{name} from {company}";
@@ -20,7 +19,6 @@
 "time.difference.delivered" = "İletildi";
 "actionsheet.try.again" = "Tekrar Dene";
 "alert.new.sdk.user.title" = "Tebrikler";
-"app_team" = "{name} Ekibi";
 "navbar.title.conversations" = "{name} ile\nsohbetler";
 "actionsheet.cancel" = "İptal";
 "navigation.close" = "Kapat";
@@ -37,7 +35,6 @@
 "message.seen" = "Görüldü";
 "last_active.format.days.ago" = "{days}g önce aktif";
 "error.starting.conversation.fallback" = "Yeni bir sohbet başlatılamadı";
-"error.no_conversations.message" = "{name} ekibiyle henüz bir sohbet yapılmamış";
 "time.difference.format.days.ago" = "{delta}g önce";
 "error.loading.conversations.fallback.no_app_name" = "Sohbetlerin yüklenemiyor";
 "we.run.on.intercom" = "Intercom üzerinden faaliyet gösteriyoruz";
@@ -46,3 +43,9 @@
 "error.tap.to.retry" = "Yeniden Dene";
 "reply_from_admin" = "Yanıtlayan {name}";
 "inbox.you" = "Sen";
+"article_question" = "Bu yanıt sorunuz için yeterli oldu mu?";
+"article_reaction" = "Şu şekilde yanıt verdiniz:";
+"asked_about" = "Şununla ilgili soru soruldu";
+"article_load_error" = "Yazı yüklenemedi";
+"error.loading.conversations.fallback" = "{name} kişisi ile yaptığınız görüşmeler yüklenemedi";
+"error.no_conversations.message" = "{name} kişisi ile henüz bir görüşme gerçekleştirilmedi";
